@@ -3,6 +3,7 @@ $Id$
 1.4.5 TBD
 
 * ensure graph controls float above other elements
+* zoom when zoom rectangle drags to right or left
 * added hourly interval
 * increase variety of colors (thanks to matt perry)
 * improved controls layout (thanks to matt perry)
